--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <img id="center-img" src="images/travel-cover.jpg" alt="Travel over the World">
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
