--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 </head>
 
 <body>
+    <h1 id=ta>Welcome To <span>Mahmud's</span> World</h1>
     <img id="center-img" src="images/travel-cover.jpg" alt="Travel over the World">
     <section class="top-banner">
-        <div class="half-width">
-            <h1>Welcome To</h1>
-            <h1><span>Mahmud's</span> World</h1>
-            <h3>What do I love about traveling?</h3>
+        <div class="half-width" id="font">
+
+            <h2 id=lt> What do I love about traveling?</h2>
+            <h3>Yes, I Love Traveling</h3>
             <p>For the first time in this year of wild adventures I am actually trying to find some answers to the above
                 question, firstly because my editor (hey Mandy!) asked me to do so (thank you, Sabrina :P), secondly
                 because it might help me reply to the thousands of questions I have in my mind and to the people who
@@ -29,8 +30,7 @@
 
                 Yeah, it’s like a drug, but the good kind (and totally legal). After much reflection, here is a first
                 list…but I feel that in a few months, the reasons might change. </p>
-            <a class="anchor-button" target="_blank" href="https://www.linkedin.com/in/feroz-mahmud/">Learn
-                More</a>
+            <a class="anchor-button" target="_blank" href="https://www.linkedin.com/in/feroz-mahmud/">Linked Me</a>
         </div>
         <div class="half-width">
             <img id="img" src="images/1st.jpg" alt="">
@@ -43,7 +43,7 @@
                 alt="">
         </div>
         <div class="half-width">
-            <h2>Experiencing New Cultures</h2>
+            <h2 id=ltt>Experiencing New Cultures</h2>
             <h3>I love experiencing new cultures</h3>
             <p>This is probably the most common reason. I don’t travel to tick boxes on an imaginary list of countries
                 (nor I count them if I only have a flight connection there, as some other bloggers do…..). Immersing
@@ -53,10 +53,9 @@
         </div>
     </section>
     <section class="experience-area">
-        <h2 class="lp">What I Love?</h2>
+        <h2 class="lp">What I Love too?</h2>
         <div class="half-width" id="full-stack">
             <h2>I love learning</h2>
-            <!-- <h3>2021-Present | Pro Level Developer</h3> -->
             <p class="rp">Learning is a strong reason why people travel. They want to experience something
                 unfamiliar and leave
                 with new skills or knowledge. Seeing the world is more educational than a high school or college class.
@@ -77,6 +76,9 @@
                 met on the road. </p>
         </div>
     </section>
+
+    <img id="thanks" src="images/thank-you.jpg" alt="THANK YOU!">
+
     <footer>
         <p>© Feroz Mahmudr 2021, a Traveling Portfolio.</p>
     </footer>
