--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <img id="thanks" src="images/thank-you.jpg" alt="THANK YOU!">
 
     <footer>
-        <p>© Feroz Mahmudr 2021, a Traveling Portfolio.</p>
+        <p> <b>A Traveling Website ©Feroz Mahmud 2021</b> </p>
     </footer>
 </body>
 
